--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "19.1.0",
     "react-native": "0.81.0",
     "react-native-linear-gradient": "^2.8.3",
+    "react-native-pager-view": "^6.9.1",
     "react-native-paper": "^5.14.5",
     "react-native-safe-area-context": "^5.6.1",
     "react-native-screens": "^4.15.0",
