Sessão de Ranking

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,9 @@
     "paths": {
       "~/*": [
         "src/*"
+      ],
+      "@/*": [
+        "./*" // <-- AQUI ESTÁ A REGRA PARA O ATALHO DA RAIZ
       ]
     }
   }
